# SkyrimOnline

./: .gitignore  .gitmodules  README.md  SkyrimOnline.sln  private.key  public.key
Client/: Client.sln
Client/Src/Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters
Client/Src/Server/Src/: GameWorld.cpp  GameWorld.h  Skyrim.cpp  main.cpp  stdafx.h
Client/Src/Server/Src/DAO/: Account.h
Client/Src/Server/Src/Entity/: Account.h
Client/Src/Server/Src/Game/: ActorController.cpp  ActorController.h  Area.cpp  Area.hpp  Character.cpp  Character.h  Character.hpp  Map.cpp  Map.h  Mount.h  NPC.cpp  NPC.hpp  Object.cpp  Object.hpp  Party.cpp  Party.h  PlayerGOMEntry.cpp  PlayerGOMEntry.h  PlayerGOMServer.cpp  PlayerGOMServer.h  ScriptEngine.cpp  ScriptEngine.hpp  TimeManager.cpp  TimeManager.hpp  WeatherManager.cpp  WeatherManager.hpp  WorldManager.cpp  WorldManager.h
Client/Src/Server/Src/Logic/: ChatJail.cpp  Session.cpp  Session.h  World.cpp  World.h
Client/Src/Server/Src/Logic/Handlers/: Authentication.cpp  Character.cpp  Player.cpp  Service.cpp  World.cpp
Client/Src/Server/Src/Logic/Senders/: Character.cpp
Client/Src/Server/Src/Script/: Online.cpp  scriptarray.cpp  scriptbuilder.cpp  scriptstdstring.cpp  scriptstdstring_utils.cpp
Common/: ClientPackets.hpp  Opcodes.h  Packet.cpp  ServerPackets.hpp  SharedPackets.hpp
Resources/: class_method__script__engine.txt  nativeregaddr_nativeclass_nativename.txt  nativeregaddr_nativeparams.txt
Server/: Server.sln
Updater/: App.config  Panel.Designer.cs  Panel.cs  Panel.resx  Program.cs  SharpSvn.xml  (+4 more)
(+822 files in other folders)
